# search-index-bakeoff

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  pyproject.toml  search_index_exploration.ipynb
benchmarks/: benchmark_reader_service.py
benchmarks/benchmark_ai_search/: request_metrics.csv  summary.json  system_metrics.csv  worker_metrics.csv
benchmarks/benchmark_lancedb_az_blob/: request_metrics.csv  summary.json  system_metrics.csv  worker_metrics.csv
benchmarks/benchmark_lancedb_cloud/: request_metrics.csv  summary.json  system_metrics.csv  worker_metrics.csv
clients/: reader_client.py  writer_client.py
reader/: Dockerfile  gunicorn_config.py  main.py
reader/api/: endpoints.py  models.py
reader/services/: hierarchy_search_service.py  hierarchy_search_service_azure.py
shared/: auth.py  config.py  database.py  embedding_service.py  models.py  vena_service.py
shared/storage/: __init__.py  azure_blob.py  base.py  lancedb_cloud.py  local_file.py
writer/: Dockerfile  gunicorn_config.py  main.py
writer/api/: endpoints.py  models.py
writer/services/: hierarchy_writer_service.py  table_service.py
